--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "styled-components": "^5.3.5",
     "sweet-pubsub": "^1.1.2",
     "typescript": "^4.6.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -83,6 +84,7 @@
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.24",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.12.0",
